# nwb_termsets

./: .gitignore  README.md  default_config.yaml  license.txt  pyproject.toml
.github/workflows/: tests.yml
lab_termsets/: lab_resources_template.yaml
scripts/: README.md  example_usage.py  generate_brain_region_termsets.py  generate_lab_termsets.py
src/nwb_termsets/: __init__.py
src/nwb_termsets/term_sets/: brain_region_hba_termset.yaml  brain_region_mba_termset.yaml  brain_region_uberon_termset.yaml  subject_species_ncbitaxon_termset.yaml
term_sets/: brain_region_hba_termset.yaml  brain_region_mba_termset.yaml  brain_region_uberon_termset.yaml
tests/: test_nwb_termsets.py
